update gitignore and package

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,11 @@ hs_err_pid*
 
 .settings
 .idea
+target/classes
+target/generated-sources
+target/generated-test-sources
+target/maven-archiver
+target/maven-status
+target/surefire-reports
+target/test-classes
 
